all done, but still weak
